<resources>
    <string name="app_name">module_main</string>
    <string name="home">首页</string>
    <string name="discover">发现</string>
    <string name="question">问答</string>
    <string name="navigation">导航</string>
    <string name="category">分类</string>
    <string name="profile">我的</string>
    <string name="square">广场</string>
    <string name="wedchat_account">公众号</string>
    <string name="project">项目</string>
    <string name="system">体系</string>
    <string name="collection">收藏</string>
    <string name="refresh">新</string>
    <string name="top">置顶</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_username">请输入用户名</string>
    <string name="prompt_password">请输入密码</string>
    <string name="prompt_rePassword">再次输入登录密码</string>
    <string name="action_register">注册</string>
    <string name="action_sign_in_short">密码</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_repassword">两次密码输入不一致</string>
    <string name="login_failed">登录失败</string>
    <string name="my_integral">我的积分</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_share">我的分享</string>
    <string name="my_message">消息</string>
    <string name="my_setting">设置</string>
    <string name="collect_success">收藏成功！</string>
    <string name="collect_failure">收藏失败！</string>
    <string name="cancel_success">取消成功！</string>
    <string name="cancel_failure">取消失败！</string>
</resources>