<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp">

        <ImageView
            android:layout_marginTop="96dp"
            android:id="@+id/iv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="60dp"
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape_login_input_bg"
            app:layout_constraintTop_toBottomOf="@id/iv_welcome">

            <ImageView
                android:id="@+id/usernameIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_username"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="@id/usernameEt"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/usernameEt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_username"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/usernameIv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout"
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="@drawable/shape_login_input_bg">

            <ImageView
                android:id="@+id/passwordIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="@id/passwordEt"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordEt"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@id/passwordIv"
                app:layout_constraintLeft_toRightOf="@id/passwordIv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/passwordIv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:enabled="false"
            android:id="@+id/loginBtn"
            style="@style/LoginButtonStyle"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout" />


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/loginBtn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/loginBtn" />

        <TextView
            android:id="@+id/forgetTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@id/part_line"
            app:layout_constraintRight_toLeftOf="@id/part_line"
            app:layout_constraintTop_toTopOf="@id/part_line" />

        <TextView
            android:id="@+id/registerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/action_register"
            android:textColor="@color/colorPrimary"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="@id/part_line"
            app:layout_constraintLeft_toRightOf="@id/part_line"
            app:layout_constraintTop_toTopOf="@id/part_line" />

        <View
            android:id="@+id/part_line"
            android:layout_width="1px"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>