<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".ui.activity.ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp">

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:src="@drawable/ic_welcome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/shape_login_input_bg"
            app:layout_constraintTop_toBottomOf="@id/iv_welcome">

            <ImageView
                android:id="@+id/usernameIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_username"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="@id/username"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_username"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/usernameIv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/shape_login_input_bg"
            app:layout_constraintTop_toBottomOf="@id/usernameLayout">

            <ImageView
                android:id="@+id/passwordIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="@id/password"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@id/passwordIv"
                app:layout_constraintLeft_toRightOf="@id/passwordIv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/passwordIv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rePasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_login_input_bg"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout">

            <ImageView
                android:id="@+id/rePasswordIv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintLeft_toRightOf="@id/rePassword"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/rePassword"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/prompt_rePassword"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:maxLength="12"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="@id/rePasswordIv"
                app:layout_constraintLeft_toRightOf="@id/rePasswordIv"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/rePasswordIv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/registerBtn"
            style="@style/LoginButtonStyle"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:enabled="false"
            android:text="@string/action_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rePasswordLayout" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>